--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
-  (Hello)
+  (Hello, I made this from a new branch)
 </p>
 
 </body>
